syntax = "proto3";
//生成文件所在包名
option java_package = "cn.aberic.bother.entity.proto.node";
//生成的java文件名
option java_outer_classname = "NodeElectionProto";

import "node/NodeBase.proto";

// 当前节点竞选对象
message NodeElection {
    repeated NodeBase nodeBases = 1; // 当前选举节点基本信息集合 <= 50
    repeated string addresses = 2; // 从其它竞选节点获取其两个子节点的而组成的备用节点集合 <= 100
}
